<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrijavaActivity">

    <EditText
        android:id="@+id/et_korimePrijava"
        android:layout_width="222dp"
        android:layout_height="51dp"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/txt_unesiK"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_lozinkaPrijava"
        android:layout_width="219dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/txt_unesiL"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_korimePrijava" />

    <Button
        android:id="@+id/btnPrijava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_prijava"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_lozinkaPrijava"
        app:layout_constraintVertical_bias="0.112" />

    <TextView
        android:id="@+id/txt_nemasracun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nemasracun"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPrijava" />

    <TextView
        android:id="@+id/txtIdiNaRegistraciju"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_idinaReg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_nemasracun"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/txtIdiNaPocetnuStr"
        android:layout_width="59dp"
        android:layout_height="26dp"
        android:text="@string/txt_idiNaPocetnu"
        app:layout_constraintBottom_toTopOf="@+id/et_korimePrijava"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />
</androidx.constraintlayout.widget.ConstraintLayout>