<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:strokeColor="@color/akcijska_narancasta"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imgVozilo"
                android:layout_width="110dp"
                android:layout_height="80dp"
                android:contentDescription="@string/content_description_vozilo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtNazivVozila"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/naziv_vozila"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtGodinaProizvodnje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/godina_proizvodnje" />

                <TextView
                    android:id="@+id/txtKilometri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kilometri" />

                <TextView
                    android:id="@+id/txtCijena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cijena"
                    android:textColor="@color/akcijska_narancasta"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>