<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:id="@+id/sadrzajDetalja"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- SLIDER SLIKA -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpSlike"
                android:layout_width="match_parent"
                android:layout_height="260dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- NASLOV -->
                <TextView
                    android:id="@+id/txtNaslov"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <!-- CIJENA -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cijena"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtCijenaVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!-- VOZILO -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vozilo"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtVoziloVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <!-- GODINA -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/godina_proizvodnje"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtGodinaVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <!-- KILOMETRI -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kilometri"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtKilometriVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <!-- GORIVO -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gorivo"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtGorivoVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <!-- SNAGA MOTORA -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/snaga_motora"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtSnagaVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <!-- MJENJAČ -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tip_mjenjaca"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtMjenjacVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <!-- BROJ BRZINA -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/broj_brzina"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtBrzineVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <!-- OPIS -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/opis"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtOpisVrijednost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <!-- LOKACIJA -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lokacija"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtLokacijaVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp" />
                </LinearLayout>

                <!-- KORISNIK -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/objavio"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtKorisnikVrijednost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textStyle="italic" />
                </LinearLayout>

                <!-- AKCIJE OGLASA -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <!-- UREĐIVANJE -->
                    <Button
                        android:id="@+id/btnUredi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/uredi_oglas"
                        android:visibility="visible" />

                    <!-- BRISANJE -->
                    <Button
                        android:id="@+id/btnObrisi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:text="@string/obrisi_oglas"
                        android:visibility="visible" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnDodajKomentar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/ostavi_komentar_recenziju"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtNaslovKomentari"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/komentari_i_recenzije"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewKomentari"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:nestedScrollingEnabled="false" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressDetalji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="visible" />

</FrameLayout>
