<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostavkeActivity">
    <!--
    <LinearLayout
        android:id="@+id/llTestBaze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/llJezik"
        android:layout_marginBottom="24dp">

        <Button
            android:id="@+id/btnTestBaze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test baze" />

        <TextView
            android:id="@+id/txtRezultatBaze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="Ime korisnika" />

    </LinearLayout>
    -->

    <LinearLayout
        android:id="@+id/llJezik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/switchTamniNacin"
        android:layout_marginBottom="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odaberite_jezik"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/btnHrvatski"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jezik_hrvatski" />

            <Button
                android:id="@+id/btnEngleski"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/jezik_engleski" />
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTamniNacin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/tamni_nacin"
        app:thumbTint="@color/bojanavigacije"
        app:trackTint="@color/bojanavigacije"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/donjaNavigacija"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/donji_izbornik"
        android:background="?attr/colorSurface"
        app:itemIconTint="@color/bojanavigacije"
        app:itemTextColor="@color/bojanavigacije"
        />

</RelativeLayout>
